--- a/Views/Clientes/Edit.cshtml
+++ b/Views/Clientes/Edit.cshtml
@@ -93,14 +93,17 @@
                         </td>
 
                         <td>
-                            @Html.ActionLink("Editar", "ContactoCliente", "Edit", "Edit", new { id = item.ID }) |
-                            @Html.ActionLink("Eliminar", "ContactoCliente", "Delete", "Delete", new { id = item.ID })
+                            @Html.ActionLink("Editar", "Edit", "ContactoCliente", new { id = item.ID, IdCliente = Model.Cliente.ID}, null) |
+                            @Html.ActionLink("Eliminar", "Delete", "ContactoCliente", new { id = item.ID, IdCliente = Model.Cliente.ID }, null) |
                         </td>
+                            <h5>@Html.ActionLink("Agregar contacto nuevo", "ContactoCliente", "Create", "Create", new { id = item.ID })</h5>
                     </tr>
+                        
+                            
                 }
-
             </table>
         </div>
+
 
 
         <div class="form-group">
