--- a/Views/ContactoCliente/Edit.cshtml
+++ b/Views/ContactoCliente/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ConsultaMVCWeb.Models.Contacto_Cliente
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar";
 }
 
 <h2>Edit</h2>
@@ -12,24 +12,27 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Contacto_Cliente</h4>
+        <h4>Contacto del Cliente</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
 
+
         <div class="form-group">
-            @Html.LabelFor(model => model.ID_Cliente, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            @Html.HiddenFor(model => model.ID_Cliente, htmlAttributes: new { @class = "control-label col-md-2" })
+
+            <!--<div class="col-md-10">
                 @Html.EditorFor(model => model.ID_Cliente, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ID_Cliente, "", new { @class = "text-danger" })
-            </div>
+            </div>-->
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ID_Tipo, "ID_Tipo", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ID_Tipo, "Tipo", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ID_Tipo", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ID_Tipo, "", new { @class = "text-danger" })
+
             </div>
         </div>
 
@@ -50,7 +53,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver", "Edit", "Clientes", new { id = ViewBag.IdCliente }, null) |
 </div>
 
 @section Scripts {
