--- a/Views/Clientes/Edit.cshtml
+++ b/Views/Clientes/Edit.cshtml
@@ -74,6 +74,8 @@
         </div>
 
         <div class="row">
+
+            @Html.ActionLink("Nuevo", "Create", "ContactoCliente", new {  IdCliente = Model.Cliente.ID }, null)
             <table class="table">
                 <tr>
 
@@ -93,13 +95,12 @@
                         </td>
 
                         <td>
-                            @Html.ActionLink("Editar", "Edit", "ContactoCliente", new { id = item.ID, IdCliente = Model.Cliente.ID}, null) |
+                            @Html.ActionLink("Editar", "Edit", "ContactoCliente", new { id = item.ID, IdCliente = Model.Cliente.ID }, null) |
                             @Html.ActionLink("Eliminar", "Delete", "ContactoCliente", new { id = item.ID, IdCliente = Model.Cliente.ID }, null) |
                         </td>
-                            <h5>@Html.ActionLink("Agregar contacto nuevo", "ContactoCliente", "Create", "Create", new { id = item.ID })</h5>
                     </tr>
-                        
-                            
+
+
                 }
             </table>
         </div>
@@ -109,13 +110,14 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Guardar" class="btn btn-default" />
+              
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "clientes")
 </div>
 
 @section Scripts {
