Se agrego filtro al campo clientes

--- a/Views/ContactoCliente/Delete.cshtml
+++ b/Views/ContactoCliente/Delete.cshtml
@@ -12,12 +12,12 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ID_Cliente)
+            @Html.HiddenFor(model => model.ID_Cliente)
         </dt>
 
-        <dd>
+        @*<dd>
             @Html.DisplayFor(model => model.ID_Cliente)
-        </dd>
+        </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.Valor)
