--- a/Views/Clientes/Delete.cshtml
+++ b/Views/Clientes/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model ConsultaMVCWeb.Models.Clientes
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "ELIMINAR CLIENTE";
 }
 
-<h2>Delete</h2>
+<h3>ELIMINAR CLIENTE</h3>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Estás seguro de que quieres eliminar esto?</h3>
 <div>
-    <h4>Clientes</h4>
+    @*<h4>Clientes</h4>*@
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -27,7 +27,7 @@
             @Html.DisplayFor(model => model.Apellido)
         </dd>
 
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.Direccion)
         </dt>
 
@@ -57,7 +57,7 @@
 
         <dd>
             @Html.DisplayFor(model => model.Telefono)
-        </dd>
+        </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.Ocupacion)
@@ -74,8 +74,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="ELIMINAR" class="btn btn-default" /> |
+            @Html.ActionLink("Volver a la lista", "Index")
         </div>
     }
 </div>
