--- a/Views/Clientes/Details.cshtml
+++ b/Views/Clientes/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model ConsultaMVCWeb.Models.Clientes
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "DETALLE CLIENTE";
 }
 
-<h2>Details</h2>
+<h3>DETALLE CLIENTE</h3>
 
 <div>
-    <h4>Clientes</h4>
+    @*<h4>Clientes</h4>*@
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -26,7 +26,7 @@
             @Html.DisplayFor(model => model.Apellido)
         </dd>
 
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.Direccion)
         </dt>
 
@@ -56,7 +56,7 @@
 
         <dd>
             @Html.DisplayFor(model => model.Telefono)
-        </dd>
+        </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.Ocupacion)
@@ -69,6 +69,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Volver a la lista", "Index")
 </p>
