--- a/Views/Clientes/Edit.cshtml
+++ b/Views/Clientes/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model ConsultaMVCWeb.Dto.ClienteDto
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "EDITAR CLIENTE";
 }
 
-<h2>Edit</h2>
+<h3>EDITAR CLIENTE</h3>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Clientes</h4>
+        @*<h4>Clientes</h4>*@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Cliente.ID)
@@ -33,7 +33,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.Cliente.Direccion, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Cliente.Direccion, new { htmlAttributes = new { @class = "form-control" } })
@@ -63,7 +63,7 @@
                 @Html.EditorFor(model => model.Cliente.Telefono, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Cliente.Telefono, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Cliente.Ocupacion, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -75,7 +75,9 @@
 
         <div class="row">
 
-            @Html.ActionLink("Nuevo", "Create", "ContactoCliente", new {  IdCliente = Model.Cliente.ID }, null)
+
+            <h5> @Html.ActionLink("NUEVO CONTACTO", "Create", "ContactoCliente", new { IdCliente = Model.Cliente.ID }, null)</h5>
+
             <table class="table">
                 <tr>
 
@@ -103,21 +105,21 @@
 
                 }
             </table>
-        </div>
-
-
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Guardar" class="btn btn-default" />
-              
+                <input type="submit" value="Guardar" class="btn btn-default"/>
             </div>
         </div>
+
+        </div>
+
+
+
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "clientes")
+    @Html.ActionLink("Volver a la lista", "Index")
 </div>
 
 @section Scripts {
