--- a/Views/Clientes/Index.cshtml
+++ b/Views/Clientes/Index.cshtml
@@ -1,13 +1,25 @@
 ﻿@model IEnumerable<ConsultaMVCWeb.Models.Clientes>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "LISTA DE CLIENTES";
 }
 
-<h2>Index</h2>
-
+<h3>LISTA DE CLIENTES</h3>
+<br />
+@using (Html.BeginForm("Index", "Clientes", FormMethod.Post))
+{
+    <div class="panel panel-default pull-right">
+        <div class="panel-body panel-heading">
+            <div class="form-inline">
+                @Html.TextBox("buscar","", new { @class = "form-control" })
+                <button type="submit" class="btn btn-default">Buscar</button>
+            </div>
+        </div>
+    </div>
+    <br /><br />
+ }
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear Nuevo Cliente", "Create")
 </p>
 <table class="table">
     <tr>
@@ -17,18 +29,18 @@
         <th>
             @Html.DisplayNameFor(model => model.Apellido)
         </th>
-        <th>
+        @*<th>
             @Html.DisplayNameFor(model => model.Direccion)
-        </th>
-        <th>
+        </th>*@
+        @*<th>
             @Html.DisplayNameFor(model => model.Ciudad)
-        </th>
-        <th>
+        </th>*@
+        @*<th>
             @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
+        </th>*@
+        @*<th>
             @Html.DisplayNameFor(model => model.Telefono)
-        </th>
+        </th>*@
         <th>
             @Html.DisplayNameFor(model => model.Ocupacion)
         </th>
@@ -44,7 +56,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Apellido)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Direccion)
             </td>
             <td>
@@ -55,14 +67,14 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Telefono)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.Ocupacion)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                @Html.ActionLink("Editar", "Edit", new { id = item.ID }) |
+                @Html.ActionLink("Detalles", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Eliminar", "Delete", new { id = item.ID })
             </td>
         </tr>
     }
