--- a/Views/ContactoCliente/Create.cshtml
+++ b/Views/ContactoCliente/Create.cshtml
@@ -16,11 +16,11 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.ID_Cliente, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            @Html.HiddenFor(model => model.ID_Cliente, htmlAttributes: new { @class = "control-label col-md-2" })
+            @*<div class="col-md-10">
                 @Html.EditorFor(model => model.ID_Cliente, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ID_Cliente, "", new { @class = "text-danger" })
-            </div>
+            </div>*@
         </div>
 
         <div class="form-group">
@@ -46,6 +46,7 @@
         </div>
     </div>
 }
+
 
 <div>
     @Html.ActionLink("Volver", "Edit", "Clientes", new { id = Model.ID_Cliente }, null) |
